# Autonomous_robots_TME290

./: .gitignore  README.md
Assignment1/parta/parta-sahni/: CMakeLists.txt  Dockerfile  README.md  helloworld  helloworld.cpp
Assignment1/partb/opendlv-logic-sahni/: CMakeLists.txt  Dockerfile  messages.hpp  multiplier.cpp  opendlv.odvd
Assignment2/: get_changes.sh  update_changes.sh
Assignment2/opendlv-logic-test-kiwi/: CMakeLists.txt  Dockerfile  simulate-kiwi.yml  simulation-map.txt
Assignment2/opendlv-logic-test-kiwi/src/: behavior.hpp  opendlv-logic-test-kiwi.cpp
Assignment2/opendlv-virtual-motor-kiwi/: .gitlab-ci.yml
Assignment2/opendlv-virtual-motor-kiwi/src/: differential.cpp  differential.hpp  opendlv-virtual-motor-kiwi.cpp
Assignment2/parta/: parta_plot.ipynb  parta_plot.py
Assignment2/partb/: task_b_recording.rec
Assignment2/partb/opendlv-logic-test-kiwi/: interface-kiwi.yml
Assignment2/partb/opendlv-virtual-motor-kiwi/: CMakeLists.txt  Dockerfile
Assignment3/Multidimensional kalman filter/: Makefile  assignment3.cpp  backup_multidimensional_kalman_filter.cpp  csv.cpp  csv.hpp  demo_kalman_app.cpp  kalman.cpp  kalman.hpp  multidimensional_kalman_filter.cpp
Assignment3/Multidimensional kalman filter/data/: csv_read.cpp  gnss-1.csv  groundtruth-1.csv  visualize.mlx
Assignment3/python implementation/code/: kalman_filter_lawn_mower.ipynb
Assignment4/: update_changes.sh
Assignment4/lawnmower/: CMakeLists.txt  Dockerfile
Assignment4/lawnmower/src/: tinyso.hpp  tme290-lawnmower-trainer.cpp  (+2 more)
csv_reading/: csv_read.cpp  wheelspeeds-1.csv
(+2 files in other folders)
